--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no">
+		<meta name="cross-origin-opener-policy" content="same-origin">
+		<meta name="cross-origin-embedder-policy" content="require-corp">
 		<title>sprint frenzy</title>
 		<style>
 body {
@@ -137,7 +139,7 @@ body {
 
 		<script src="index.js"></script>
 		<script>
-const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":7270320,"index.wasm":48585775},"focusCanvas":true,"gdextensionLibs":[]};
+const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":7322496,"index.wasm":48585775},"focusCanvas":true,"gdextensionLibs":[]};
 const engine = new Engine(GODOT_CONFIG);
 
 (function () {
@@ -243,6 +245,7 @@ const engine = new Engine(GODOT_CONFIG);
 	}
 }());
 		</script>
+		<script src="coi-serviceworker.js"></script>
 	</body>
 </html>
 
